--- a/style.css
+++ b/style.css
@@ -10,6 +10,19 @@ h2 {
   padding-bottom: 5px;
 }
 
+/* Carousel */
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color: rgba(0, 0, 0, 0.8);  
+  padding: 30px;                         
+  border-radius: 6px;
+}
+
+.carousel-control-prev-icon:hover,
+.carousel-control-next-icon:hover {
+  background-color: rgba(0, 0, 0, 1);
+}
+
 /* Cards */
 .card {
   transition: transform 0.2s ease-in-out;
